# TMO

./: .gitignore  README.md  pyproject.toml  requirements.txt
custom/: README.md  run_custom.py
data/: M4A1.json
data/d/: M4A1.json
main/: main.py  models.py  options.py  utils.py
scripts/: run_main_experiment.py
tmo/: __init__.py  config.py  data.py  devices.py  env.py  evaluator.py  parallel.py  trainer.py
